--- a/my_countdown.css
+++ b/my_countdown.css
@@ -42,5 +42,59 @@ body { margin: 0; padding: 0; background-color: #092f6e; color: #fff; }
 	padding: 0px;
 	text-align: center;
 	letter-spacing: 9px;
+}
+
+#world-premier .my-countdown .countdown-row{
+	display: block;
+	text-align: center;
+}
+
+#world-premier .my-countdown .countdown-section{
+	display: inline-block;
+	width: 95px;
+}
+
+#world-premier .my-countdown .countdown-amount{
+	display: block;
+	color: #ffffff;
+	font-size: 5.6em;
+	line-height: 55px
 
 }
+
+#world-premier .my-countdown .countdown-period{
+	display: block;
+	color: #6fb5f8;
+	font-size: 1.4em;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+}
+
+@media screen and (max-width: 525px){
+	#world-premier{
+		font-size: 12px;
+		width: 300px;
+		min-height: 465px;
+		background-size: 400px auto;
+	}
+
+	#world-premier .heading{
+		padding: 12px 0px 8px 0px;
+		margin-bottom: 20px;
+	}
+
+	#world-premier h1{
+		line-height: 40px;
+		font-size: 3.7em;
+	}
+
+	#world-premier h2{
+		line-height: 22px;
+		letter-spacing:5px;
+	}
+
+	#world-premier .my-countdown .countdown-section{
+		width: 68px;
+	}
+}
+
